--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,3 @@
-<%= render(HeaderComponent.new("Hello Dave")) do %>
-"find me in app/views/pages/home.html.erb"
+<%= render(HeaderComponent.new) do %>
+find me in app/views/pages/home.html.erb
 <% end %>
