--- a/app/components/header_component.html.erb
+++ b/app/components/header_component.html.erb
@@ -1,2 +1,6 @@
-<h1><%= @title %></h1>
+<h1 style="border: 1px solid green; 
+           background: #111; 
+           color: #fff;
+           border-radius: 5px;
+           padding: 10px"><%= @title %></h1>
 <p><%= content %></p>
