--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -4,7 +4,7 @@
 
 <div id="posts">
   <% @posts.each do |post| %>
-    <%= render post %>
+    <%= render(PostComponent.new(post: post)) %>
     <p>
       <%= link_to "Show this post", post %>
     </p>
